# PyGSP2

./: .gitignore  .isort.cfg  .readthedocs.yml  .style.yapf  .zenodo.json  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  Makefile  README.rst  dict.txt  pyproject.toml  ruff.toml  setup.py  skip.txt
.github/workflows/: codespell.yml  isort.yml  release-conda.yml  release-pypi.yml  release.yml  ruff.yml  test-main.yml  test_examples.yml  yapf.yml
doc/: conf.py  requirements.txt
doc/reference/: features.rst  filters.rst  graphs.rst  index.rst  learning.rst  optimization.rst  plotting.rst  reduction.rst  utils.rst
doc/tutorials/: intro.rst  optimization.rst  pyramid.rst  wavelet.rst
examples/: eigenvalue_concentration.py  eigenvector_localization.py  filtering.py  fourier_basis.py  fourier_transform.py  graph_learning.py  heat_diffusion.py  kernel_localization.py  metro_graph_signal.py  metro_regression.py  metro_simulation.py  metro_simulation2.py  playground.ipynb  random_walk.py  test.py  test2.py  utils.py  wave_propagation.py
pygsp/: graph_learning.py  learning.py  plotting.py  utils.py
pygsp/graphs/: graph.py
pygsp/graphs/nngraphs/: nngraph.py
pygsp/tests/: test_learning.py
pygsp2/: __init__.py  features.py  graph_learning.py  learning.py  optimization.py  plotting.py  reduction.py  utils.py  utils2.py  utils_examples.py
pygsp2/data/: santiago_metro_stations_connections.txt  santiago_metro_stations_coords.geojson
pygsp2/filters/: __init__.py  abspline.py  approximations.py  expwin.py  filter.py  gabor.py  halfcosine.py  heat.py  held.py  itersine.py  mexicanhat.py  meyer.py  modulation.py  papadakis.py  rectangular.py  regular.py  simoncelli.py  simpletight.py  wave.py
pygsp2/graphs/: __init__.py  _io.py  _layout.py  airfoil.py  barabasialbert.py  comet.py  community.py  davidsensornet.py  difference.py  erdosrenyi.py  fourier.py  graph.py  grid2d.py  linegraph.py  logo.py  lowstretchtree.py  minnesota.py  path.py  randomregular.py  randomring.py  ring.py  star.py  stochasticblockmodel.py  swissroll.py  torus.py
pygsp2/graphs/nngraphs/: __init__.py  bunny.py  cube.py  grid2dimgpatches.py  imgpatches.py  nngraph.py  sensor.py  sphere.py  twomoons.py
pygsp2/tests/: __init__.py  test_docstrings.py  test_filters.py  test_graphs.py  test_learning.py  test_plotting.py  test_utils.py  test_utils2.py
recipe/: meta.yaml
